# rk3568_emmc

./: .bare-test.toml  Cargo.toml  README_CN.md
src/: lib.rs  sdhci.rs  sdhci_cmd.rs  sdhci_reg.rs
tests/: test.rs
